objects/PMC_SS_AllocationSummary__c.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_AllocationFrequency__c</fullName>
        <label>Allocation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AllocationPeriod__c</fullName>
        <description>Specifies the Allocation Period</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allocation Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Product plant Location</description>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location.PMC_CPQ_SAPLocationId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Allocation Summaries</relationshipLabel>
        <relationshipName>Allocation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductLocationAllocationKey__c</fullName>
        <description>Specifies the Product Location Allocation Period Key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Product Location Allocation Period Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.PMC_CPQ_SAPProductCode__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Allocation Summaries</relationshipLabel>
        <relationshipName>Allocation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TotalAllocationQuantity__c</fullName>
        <description>Specifies the Total Allocation Quantity</description>
        <label>Total Allocation Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Allocation Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_SS_Product__c</columns>
        <columns>PMC_SS_Location__c</columns>
        <columns>PMC_SS_AllocationPeriod__c</columns>
        <columns>PMC_SS_TotalAllocationQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Allocation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>